# ds-agent-data-gen

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd-image.yml  ci.yml
deploy/databricks/: databricks.yml  run_autodata.py
deploy/foundry/: agent.yaml
deploy/kubernetes/: deployment.yaml
src/autodata_agent/: __init__.py  cli.py  config.py  schemas.py
src/autodata_agent/agents/: base.py  model_agent.py
src/autodata_agent/evaluators/: base.py  rubric.py  verifiable.py
src/autodata_agent/loops/: inner_loop.py  meta_optimizer.py
src/autodata_agent/quality/: validators.py
src/autodata_agent/storage/: models.py  repository.py
src/autodata_agent/telemetry/: metrics.py
tests/: test_inner_loop.py  test_meta_optimizer.py  test_quality_validator.py
