[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodata-agent"
version = "0.1.0"
description = "Multi-role synthetic data generation and evaluation harness"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "DS Agent Team" }]
dependencies = [
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "tenacity>=8.3.0",
  "sqlalchemy>=2.0.31",
  "psycopg[binary]>=3.2.1",
  "orjson>=3.10.7",
  "httpx>=0.27.0",
  "prometheus-client>=0.20.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "mypy>=1.11.1",
  "ruff>=0.5.6",
  "bandit>=1.7.9",
  "pip-audit>=2.7.3",
  "debugpy>=1.8.5",
  "agent-dev-cli>=0.0.1b260427"
]

[project.scripts]
autodata = "autodata_agent.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-q --cov=src/autodata_agent --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
packages = ["autodata_agent"]
